add support for multiple images returned by a single notebook cell

--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
 		"onView:databricksFS",
 		"onView:databricksSecrets",
 		"onView:databricksSql",
-		"onView:databricksRepos",
-		"onNotebook:jupyter-notebook"
+		"onView:databricksRepos"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
