--- a/package.json
+++ b/package.json
@@ -913,19 +913,27 @@
 	"dependencies": {
 		"@angular/common": "^14.0.1",
 		"@angular/core": "^14.0.1",
+		"assert": "^2.0.0",
 		"axios": "^0.27.2",
+		"buffer": "^6.0.3",
 		"file-saver": "^2.0.5",
 		"follow-redirects": "^1.14.8",
 		"ftp": "^0.3.10",
 		"https-agent": "^1.0.0",
+		"https-browserify": "^1.0.0",
 		"jsonc-parser": "^0.4.2",
 		"mkdirp": "^0.5.1",
+		"os-browserify": "^0.3.0",
+		"path-browserify": "^1.0.1",
 		"promise.prototype.finally": "^3.1.3",
 		"replace-in-file": "^6.3.2",
 		"request": "^2.88.2",
 		"rimraf": "^2.6.2",
 		"rxjs": "^6.6.7",
+		"stream-http": "^3.2.0",
 		"sync-request": "^6.1.0",
-		"uniquefilename": "^1.1.2"
+		"uniquefilename": "^1.1.2",
+		"url": "^0.11.0",
+		"util": "^0.12.4"
 	}
 }
