--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
 		"onView:databricksRepos",
 		"onFileSystem:dbfs"
 	],
-	"main": "./out/extension.js",
+	"main": "./dist/extension.js",
 	"contributes": {
 		"configuration": [
 			{
@@ -538,7 +538,6 @@
 				"title": "Restart Databricks Cluster Kernel",
 				"shortTitle": "Restart Databricks Kernel"
 			},
-
 			{
 				"command": "databricksJobs.refresh",
 				"title": "Refresh",
@@ -574,7 +573,6 @@
 				"title": "Open Browser",
 				"icon": "$(globe)"
 			},
-
 			{
 				"command": "databricksFS.addToWorkspace",
 				"title": "Add DBFS to VSCode workspace",
@@ -688,7 +686,6 @@
 				"title": "Delete",
 				"icon": "$(remove-close)"
 			},
-
 			{
 				"title": "New Databricks Notebook",
 				"shortTitle": "Databricks Notebook",
@@ -935,21 +932,27 @@
 					"group": "inline@99"
 				}
 			]
-		}				
+		}
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./"
+		"vscode:prepublish": "npm run package",
+		"compile": "webpack",
+		"watch": "webpack --watch",
+		"package": "webpack --mode production --devtool hidden-source-map",
+		"lint": "eslint src --ext ts"
 	},
 	"devDependencies": {
 		"@types/node": "^16.11.7",
 		"@types/rimraf": "^2.0.5",
 		"@types/vscode": "^1.68.0",
+		"@types/glob": "^7.2.0",
+		"@types/mocha": "^9.1.1",
 		"ts-loader": "^9.3.1",
 		"eslint": "^8.19.0",
 		"typescript": "^4.7.4",
-		"webpack": "^5.73.0",
+		"glob": "^8.0.3",
+		"mocha": "^10.0.0",
+		"webpack": "^5.74.0",
 		"webpack-cli": "^4.10.0"
 	},
 	"dependencies": {
@@ -967,7 +970,6 @@
 		"request": "^2.88.2",
 		"rimraf": "^2.6.2",
 		"rxjs": "^6.6.7",
-		"sync-request": "^6.1.0",
-		"uniquefilename": "^1.1.2"
+		"sync-request": "^6.1.0"
 	}
 }
