--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
 		"notebookKernelInteractive",
 		"notebookKernelJupyterNotebook"
 	],
+	"extensionDependencies": [
+		"RandomFractalsInc.vscode-data-table"
+	],
 	"activationEvents": [
 		"onView:DatabricksConnections",
 		"onView:databricksWorkspace",
@@ -56,7 +59,8 @@
 		"onView:databricksSecrets",
 		"onView:databricksSql",
 		"onView:databricksRepos",
-		"onFileSystem:dbfs"
+		"onFileSystem:dbfs",
+		"onFileSystem:dbws"
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
