--- a/package.json
+++ b/package.json
@@ -47,9 +47,6 @@
 		"notebookKernelInteractive",
 		"notebookKernelJupyterNotebook"
 	],
-	"extensionDependencies": [
-		"RandomFractalsInc.vscode-data-table"
-	],
 	"activationEvents": [
 		"onView:DatabricksConnections",
 		"onView:databricksWorkspace",
@@ -386,35 +383,45 @@
 			"databricks": [
 				{
 					"id": "DatabricksConnections",
-					"name": "Connections"
+					"name": "Connections",
+					"type": "tree"
 				},
 				{
 					"id": "databricksWorkspace",
-					"name": "Workspace"
+					"name": "Workspace",
+					"type": "tree",
+					"when": "!virtualWorkspace "
 				},
 				{
 					"id": "databricksClusters",
-					"name": "Clusters"
+					"name": "Clusters",
+					"type": "tree"
 				},
 				{
 					"id": "databricksJobs",
-					"name": "Jobs"
+					"name": "Jobs",
+					"type": "tree"
 				},
 				{
 					"id": "databricksFS",
-					"name": "DBFS"
+					"name": "DBFS",
+					"type": "tree",
+					"when": "!virtualWorkspace "
 				},
 				{
 					"id": "databricksSecrets",
-					"name": "Secrets"
+					"name": "Secrets",
+					"type": "tree"
 				},
 				{
 					"id": "databricksSQL",
-					"name": "SQL"
+					"name": "SQL",
+					"type": "tree"
 				},
 				{
 					"id": "databricksRepos",
-					"name": "Repos"
+					"name": "Repos",
+					"type": "tree"
 				}
 			]
 		},
@@ -942,34 +949,45 @@
 		"lint": "eslint src --ext ts"
 	},
 	"devDependencies": {
+		"@types/glob": "^7.2.0",
+		"@types/mocha": "^9.1.1",
 		"@types/node": "^16.11.7",
 		"@types/rimraf": "^2.0.5",
 		"@types/vscode": "^1.68.0",
-		"@types/glob": "^7.2.0",
-		"@types/mocha": "^9.1.1",
-		"ts-loader": "^9.3.1",
 		"eslint": "^8.19.0",
-		"typescript": "^4.7.4",
 		"glob": "^8.0.3",
 		"mocha": "^10.0.0",
+		"ts-loader": "^9.3.1",
+		"typescript": "^4.7.4",
 		"webpack": "^5.74.0",
 		"webpack-cli": "^4.10.0"
 	},
 	"dependencies": {
 		"@angular/common": "^14.0.1",
 		"@angular/core": "^14.0.1",
+		"assert": "^2.0.0",
 		"axios": "^0.27.2",
+		"buffer": "^6.0.3",
 		"file-saver": "^2.0.5",
 		"follow-redirects": "^1.14.8",
 		"ftp": "^0.3.10",
+		"http-browserify": "^1.7.0",
 		"https-agent": "^1.0.0",
+		"https-browserify": "^1.0.0",
 		"jsonc-parser": "^0.4.2",
 		"mkdirp": "^0.5.1",
+		"net": "^1.0.2",
+		"node-fetch": "^3.2.10",
+		"process": "^0.11.10",
 		"promise.prototype.finally": "^3.1.3",
 		"replace-in-file": "^6.3.2",
 		"request": "^2.88.2",
 		"rimraf": "^2.6.2",
 		"rxjs": "^6.6.7",
-		"sync-request": "^6.1.0"
+		"stream-http": "^3.2.0",
+		"sync-request": "^6.1.0",
+		"tls": "^0.0.1",
+		"url": "^0.11.0",
+		"util": "^0.12.4"
 	}
 }
