--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
 		"onFileSystem:dbws"
 	],
 	"main": "./dist/node/extension.js",
-	"browser": "./dist/web/extension.js",
+	"browser_NOT_WORKING_YET": "./dist/web/extension.js",
 	"contributes": {
 		"configuration": [
 			{
@@ -959,37 +959,11 @@
 		"eslint": "^8.19.0",
 		"glob": "^8.0.3",
 		"mocha": "^10.0.0",
+		"node-fetch": "^3.2.10",
+		"process": "^0.11.10",
 		"ts-loader": "^9.3.1",
 		"typescript": "^4.7.4",
 		"webpack": "^5.74.0",
 		"webpack-cli": "^4.10.0"
-	},
-	"dependencies": {
-		"@angular/common": "^14.0.1",
-		"@angular/core": "^14.0.1",
-		"assert": "^2.0.0",
-		"axios": "^0.27.2",
-		"buffer": "^6.0.3",
-		"file-saver": "^2.0.5",
-		"follow-redirects": "^1.14.8",
-		"ftp": "^0.3.10",
-		"http-browserify": "^1.7.0",
-		"https-agent": "^1.0.0",
-		"https-browserify": "^1.0.0",
-		"jsonc-parser": "^0.4.2",
-		"mkdirp": "^0.5.1",
-		"net": "^1.0.2",
-		"node-fetch": "^3.2.10",
-		"process": "^0.11.10",
-		"promise.prototype.finally": "^3.1.3",
-		"replace-in-file": "^6.3.2",
-		"request": "^2.88.2",
-		"rimraf": "^2.6.2",
-		"rxjs": "^6.6.7",
-		"stream-http": "^3.2.0",
-		"sync-request": "^6.1.0",
-		"tls": "^0.0.1",
-		"url": "^0.11.0",
-		"util": "^0.12.4"
 	}
 }
