--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "databricks-vscode",
 	"displayName": "Databricks VSCode",
 	"description": "Extension to manage your Databricks workspace and ease local development",
-	"version": "1.2.3",
+	"version": "1.3.0",
 	"publisher": "paiqo",
 	"icon": "resources/databricks_extension.png",
 	"author": {
@@ -69,7 +69,7 @@
     }
 	},
 	"main": "./dist/node/extension.js",
-	"browser_NOT_WORKING_YET": "./dist/web/extension.js",
+	"browser": "./dist/web/extension.js",
 	"contributes": {
 		"configuration": [
 			{
@@ -81,7 +81,8 @@
 						"type": "string",
 						"enum": [
 							"VSCode Settings",
-							"Databricks CLI Profiles"
+							"Databricks CLI Profiles",
+							"Azure"
 						],
 						"default": "VSCode Settings",
 						"enumDescriptions": [
@@ -400,7 +401,7 @@
 					"id": "databricksWorkspace",
 					"name": "Workspace",
 					"type": "tree",
-					"when": "!virtualWorkspace "
+					"when": "!virtualWorkspace"
 				},
 				{
 					"id": "databricksClusters",
@@ -416,7 +417,7 @@
 					"id": "databricksFS",
 					"name": "DBFS",
 					"type": "tree",
-					"when": "!virtualWorkspace "
+					"when": "!virtualWorkspace"
 				},
 				{
 					"id": "databricksSecrets",
@@ -444,7 +445,14 @@
 			{
 				"command": "DatabricksConnections.add",
 				"title": "Add",
-				"icon": "$(add)"
+				"icon": "$(add)",
+				"enablement": "virtualWorkspace"
+			},
+			{
+				"command": "DatabricksConnections.settings",
+				"title": "Settings",
+				"icon": "$(gear)",
+				"enablement": "!virtualWorkspace"
 			},
 			{
 				"command": "DatabricksConnectionItem.activate",
@@ -541,6 +549,16 @@
 				"command": "databricksClusterItem.delete",
 				"title": "Delete",
 				"icon": "$(remove-close)"
+			},
+			{
+				"command": "databricksClusterItem.pin",
+				"title": "Pin",
+				"icon": "$(pin)"
+			},
+			{
+				"command": "databricksClusterItem.unpin",
+				"title": "Unpin",
+				"icon": "$(pinned)"
 			},
 			{
 				"command": "databricksClusterItem.useForSQL",
@@ -730,7 +748,12 @@
 				},
 				{
 					"command": "DatabricksConnections.add",
-					"when": "view == DatabricksConnections",
+					"when": "view == DatabricksConnections && virtualWorkspace",
+					"group": "navigation"
+				},
+				{
+					"command": "DatabricksConnections.settings",
+					"when": "view == DatabricksConnections && !virtualWorkspace",
 					"group": "navigation"
 				},
 				{
@@ -841,31 +864,41 @@
 				},
 				{
 					"command": "databricksClusterItem.start",
-					"when": "view == databricksClusters && viewItem =~ /.*,STOPPED,.*/",
+					"when": "view == databricksClusters && viewItem =~ /.*,STOPPED,.*/ && viewItem =~ /.*,MANUAL,.*/",
 					"group": "inline"
 				},
 				{
 					"command": "databricksClusterItem.stop",
-					"when": "view == databricksClusters && viewItem =~ /.*,STARTED,.*/",
+					"when": "view == databricksClusters && viewItem =~ /.*,STARTED,.*/ && viewItem =~ /.*,MANUAL,.*/",
 					"group": "inline"
 				},
 				{
 					"command": "databricksClusterItem.showDefinition",
-					"when": "view == databricksClusters",
+					"when": "view == databricksClusters && viewItem =~ /.*,SHOW_DEFINITION,.*/",
 					"group": "inline"
 				},
 				{
 					"command": "databricksClusterItem.delete",
-					"when": "view == databricksClusters",
+					"when": "view == databricksClusters && viewItem =~ /.*,MANUAL,.*/",
 					"group": "inline@99"
 				},
 				{
+					"command": "databricksClusterItem.pin",
+					"when": "view == databricksClusters && viewItem =~ /.*,NOT_PINNED,.*/ && viewItem =~ /.*,MANUAL,.*/",
+					"group": "inline"
+				},
+				{
+					"command": "databricksClusterItem.unpin",
+					"when": "view == databricksClusters && viewItem =~ /.*,PINNED,.*/ && viewItem =~ /.*,MANUAL,.*/",
+					"group": "inline"
+				},
+				{
 					"command": "databricksClusterItem.useForSQL",
-					"when": "view == databricksClusters && viewItem =~ /.*,STARTED,.*/"
+					"when": "view == databricksClusters && viewItem =~ /.*,STARTED,.*/ && viewItem =~ /.*,MANUAL,.*/"
 				},
 				{
 					"command": "databricksClusterItem.createKernel",
-					"when": "view == databricksClusters && viewItem =~ /.*,STARTED,.*/ && viewItem =~ /.*,NOKERNEL,.*/"
+					"when": "view == databricksClusters && viewItem =~ /.*,STARTED,.*/ && viewItem =~ /.*,NOKERNEL,.*/ && viewItem =~ /.*,MANUAL,.*/"
 				},
 				{
 					"command": "databricksClusterItem.restartKernel",
@@ -1011,6 +1044,8 @@
 		"@types/rimraf": "^2.0.5",
 		"@types/vscode": "^1.68.0",
 		"@vscode/test-web": "*",
+		"@azure/identity": "^3.1.1",
+		"@azure/identity-vscode": "^1.0.0",
 		"eslint": "^8.19.0",
 		"glob": "^8.0.3",
 		"mocha": "^10.0.0",
@@ -1019,6 +1054,7 @@
 		"ts-loader": "^9.3.1",
 		"typescript": "^4.7.4",
 		"webpack": "^5.74.0",
-		"webpack-cli": "^4.10.0"
+		"webpack-cli": "^4.10.0",
+		"native-ext-loader": "^2.3.0"
 	}
 }
