--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "databricks-vscode",
 	"displayName": "Databricks VSCode",
 	"description": "Extension to manage your Databricks workspace and ease local development",
-	"version": "1.3.0",
+	"version": "1.3.1",
 	"publisher": "paiqo",
 	"icon": "resources/databricks_extension.png",
 	"author": {
@@ -66,6 +66,10 @@
 		"virtualWorkspaces": {
 			"supported": "limited",
 			"description": "In virtual workspaces, Workspace and DBFS browsers are not supported. Please use `dbfs:/` and `dbws:/` mount points instead."
+		},
+		"untrustedWorkspaces": {
+			"supported": "limited",
+			"description": "Loading connections from your Azure Account will not work in an untrusted workspace!"
 		}
 	},
 	"main": "./dist/node/extension.js",
@@ -257,7 +261,6 @@
 										"R": ".r"
 									},
 									"description": "(Optional) The different file extension used when downloading notebooks from Databricks.",
-									"scope": "window",
 									"properties": {
 										"Scala": {
 											"type": "string",
@@ -294,43 +297,36 @@
 								"displayName": {
 									"type": "string",
 									"default": "my Databricks workspace",
-									"description": "Name shown in the Connection list of the Databricks VSCode extension. . Must be unique across all VSCode workspaces to avoid conflicts!",
-									"scope": "window"
+									"description": "Name shown in the Connection list of the Databricks VSCode extension. . Must be unique across all VSCode workspaces to avoid conflicts!"
 								},
 								"apiRootUrl": {
 									"type": "string",
 									"default": "https://westeurope.azuredatabricks.net",
-									"description": "Root URL of the Databricks API. Azure: https://westeurope.azuredatabricks.net - AWS:   https://abc-12345-xaz.cloud.databricks.com",
-									"scope": "window"
+									"description": "Root URL of the Databricks API. Azure: https://westeurope.azuredatabricks.net - AWS:   https://abc-12345-xaz.cloud.databricks.com"
 								},
 								"personalAccessToken": {
 									"type": "string",
 									"default": "dapi123456789abcdef123456789abcdef",
-									"description": "The Personal Access Token (PAT) used to access the Databricks API.",
-									"scope": "window"
+									"description": "The Personal Access Token (PAT) used to access the Databricks API."
 								},
 								"personalAccessTokenSecure": {
 									"type": "object",
 									"description": "(Optional) Reference to a secure store for the Personal Access Token.",
-									"scope": "window",
 									"properties": {
 										"keyChainSettingName": {
 											"type": "string",
-											"description": "A unique identifier which is used by KeyTar to store this connection's access token securely.",
-											"scope": "window"
+											"description": "A unique identifier which is used by KeyTar to store this connection's access token securely."
 										},
 										"databricksCLIProfileName": {
 											"type": "string",
-											"description": "The name of a profile in the Databricks CLI config under ~/.databrickscfg",
-											"scope": "window"
+											"description": "The name of a profile in the Databricks CLI config under ~/.databrickscfg"
 										}
 									}
 								},
 								"localSyncFolder": {
 									"type": "string",
 									"default": "C:\\Databricks_sync",
-									"description": "A local path where files (notebooks) that are downloaded from Databricks should be stored. This folder can then be integrated in your GIT repository",
-									"scope": "window"
+									"description": "A local path where files (notebooks) that are downloaded from Databricks should be stored. This folder can then be integrated in your GIT repository"
 								},
 								"localSyncSubfolders": {
 									"type": "object",
@@ -341,7 +337,6 @@
 										"Jobs": "Jobs"
 									},
 									"description": "(Optional) Can be used to specify different sub-paths for the items that can be downloaded from Databricks.",
-									"scope": "window",
 									"properties": {
 										"Workspace": {
 											"type": "string",
@@ -364,8 +359,7 @@
 								"useCodeCells": {
 									"type": "boolean",
 									"default": false,
-									"description": "If true, Code Cell tags (# %%) will be added when downloading raw source files.",
-									"scope": "window"
+									"description": "If true, Code Cell tags (# %%) will be added when downloading raw source files."
 								}
 							}
 						},
@@ -389,17 +383,34 @@
 						"items": {
 							"type": "string",
 							"description": "An Azure Subscription ID (GUID).",
-							"examples": ["30373b46-5f05-1234-9876-d5560532fc32"]
+							"examples": [
+								"30373b46-5f05-1234-9876-d5560532fc32"
+							]
 						}
 					},
-					"databricks.azure.resourceIds": {
+					"databricks.azure.workspaces": {
 						"type": "array",
 						"description": "(Optional) A list of Azure Resource IDs to load directly without browsing the tenant first.",
 						"scope": "window",
 						"items": {
-							"type": "string",
-							"description": "An Azure Resource ID (GUID).",
-							"examples": ["/subscriptions/30373b46-5f05-1234-9876-d5560532fc32/resourceGroups/MyResourceGroup/providers/Microsoft.Databricks/workspaces/MyDatabricksWorkspace"]
+							"type": "object",
+							"properties": {
+								"displayName": {
+									"type": "string",
+									"default": "my Databricks workspace",
+									"description": "Name shown in the Connection list of the Databricks VSCode extension. Must be unique across all VSCode workspaces to avoid conflicts!"
+								},
+								"resourceId": {
+									"type": "string",
+									"description": "The Azure Resource ID (GUID) of the Databricks Workspace"
+								},
+								"localSyncFolder": {
+									"type": "string",
+									"default": "C:\\Databricks_sync",
+									"description": "A local path where files (notebooks) that are downloaded from Databricks should be stored. This folder can then be integrated in your GIT repository"
+								}
+							},
+							"description": "An Azure Resource ID (GUID)."
 						}
 					}
 				}
@@ -1063,24 +1074,23 @@
 		"test": "vscode-test-web --extensionDevelopmentPath=. --extensionTestsPath=dist/web/extension.js"
 	},
 	"devDependencies": {
-		"@azure/identity": "^3.1.1",
-		"@azure/identity-vscode": "^1.0.0",
 		"@types/glob": "^7.2.0",
 		"@types/mocha": "^9.1.1",
 		"@types/node": "^16.11.7",
 		"@types/rimraf": "^2.0.5",
 		"@types/vscode": "^1.68.0",
+		"@vscode/vsce": "^2.15.0",
 		"@vscode/test-web": "*",
 		"eslint": "^8.19.0",
 		"glob": "^8.0.3",
 		"mocha": "^10.0.0",
 		"native-ext-loader": "^2.3.0",
 		"node-fetch": "^3.2.10",
+		"path-browserify": "^1.0.1",
 		"process": "^0.11.10",
 		"ts-loader": "^9.3.1",
 		"typescript": "^4.7.4",
 		"webpack": "^5.74.0",
-		"webpack-cli": "^4.10.0",
-		"path-browserify": "^1.0.1"
+		"webpack-cli": "^4.10.0"
 	}
 }
